# ai-log-viewer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml  release-drafter.yml  requirements-publish.txt  requirements-security.txt
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml  release-drafter.yml  security.yml
src/ai_control_plane/: app.py
src/ai_control_plane/config_readers/: _common.py  claude_config.py  copilot_config.py  vscode_config.py
src/ai_control_plane/templates/: tools.html
src/ai_ctrl_plane/: __main__.py  app.py  claude_parser.py  db.py  parser.py  vscode_parser.py
src/ai_ctrl_plane/config_readers/: __init__.py  _common.py  claude_config.py  copilot_config.py
src/ai_ctrl_plane/templates/: base.html  index.html  project_detail.html  projects.html  settings.html  tool_detail.html
src/ai_log_viewer/: __init__.py  __main__.py  app.py  claude_parser.py  parser.py  vscode_parser.py
src/ai_log_viewer/templates/: index.html  session.html
src/copilot_log_viewer/: __main__.py  app.py  claude_parser.py
src/copilot_log_viewer/templates/: index.html  session.html
tests/: test_app.py  test_claude_parser.py  test_config_readers.py  test_db.py  test_parser.py  test_tools_routes.py  test_vscode_parser.py
utils/: take_screenshots.py
