[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ai-log-viewer"
dynamic = ["version"]
description = "A local web UI for browsing and understanding GitHub Copilot agent session logs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Luís Teles" },
]
keywords = ["github", "copilot", "claude", "vscode", "vscode-chat", "logs", "viewer", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "flask>=3.0",
    "pyyaml>=6.0",
    "markdown>=3.5",
    "markupsafe>=2.1",
    "nh3>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/l-teles/ai-log-viewer"
Repository = "https://github.com/l-teles/ai-log-viewer"
Issues = "https://github.com/l-teles/ai-log-viewer/issues"

[project.scripts]
ai-log-viewer = "ai_log_viewer.__main__:main"

# ---------------------------------------------------------------------------
# Hatch versioning (from git tags)
# ---------------------------------------------------------------------------
[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/ai_log_viewer/_version.py"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/ai_log_viewer"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "S", "B", "UP"]
ignore = [
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"src/ai_log_viewer/_version.py" = ["UP", "I"]  # auto-generated by hatch-vcs

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
